--- a/EDA using Univariate Analysis.ipynb
+++ b/EDA using Univariate Analysis.ipynb
@@ -2,10 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "f557af63",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Abdur rahim nishad\\anaconda3\\lib\\site-packages\\numpy\\_distributor_init.py:30: UserWarning: loaded more than 1 DLL from .libs:\n",
+      "C:\\Users\\Abdur rahim nishad\\anaconda3\\lib\\site-packages\\numpy\\.libs\\libopenblas.EL2C6PLE4ZYW3ECEVIV3OXXGRN2NRFM2.gfortran-win_amd64.dll\n",
+      "C:\\Users\\Abdur rahim nishad\\anaconda3\\lib\\site-packages\\numpy\\.libs\\libopenblas.XWYDX2IKJW2NMTWSFYNGFUWKQU3LYTCZ.gfortran-win_amd64.dll\n",
+      "  warnings.warn(\"loaded more than 1 DLL from .libs:\"\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -14,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "a68b5eb5",
    "metadata": {},
    "outputs": [],
@@ -24,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "99d4d684",
    "metadata": {},
    "outputs": [
@@ -166,7 +177,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +188,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
+   "id": "9491316c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9      NaN\n",
+       "15     NaN\n",
+       "17     NaN\n",
+       "20     NaN\n",
+       "21     D56\n",
+       "      ... \n",
+       "866    NaN\n",
+       "874    NaN\n",
+       "880    NaN\n",
+       "883    NaN\n",
+       "886    NaN\n",
+       "Name: Cabin, Length: 184, dtype: object"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# df[df[\"Pclass\"][[\"cabin\"]==np.nan]]\n",
+    "df[df[\"Pclass\"]==2][\"Cabin\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "fb7b8909",
    "metadata": {},
    "outputs": [
@@ -222,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "cf14a645",
    "metadata": {},
    "outputs": [
@@ -240,7 +284,7 @@
        "<AxesSubplot:xlabel='Pclass', ylabel='count'>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -271,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "021dcf01",
    "metadata": {},
    "outputs": [
@@ -281,7 +325,7 @@
        "<AxesSubplot:ylabel='Survived'>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -311,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "id": "feb792a8",
    "metadata": {},
    "outputs": [
@@ -326,7 +370,7 @@
        " <BarContainer object of 20 artists>)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -357,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "3cba890d",
    "metadata": {},
    "outputs": [
@@ -375,7 +419,7 @@
        "<AxesSubplot:xlabel='Age', ylabel='Density'>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -406,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "id": "512ae2e9",
    "metadata": {},
    "outputs": [
@@ -424,7 +468,7 @@
        "<AxesSubplot:xlabel='Fare'>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -447,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "id": "647d0e6b",
    "metadata": {},
    "outputs": [
@@ -465,7 +509,7 @@
        "<AxesSubplot:xlabel='Age'>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -488,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "id": "44dcb407",
    "metadata": {},
    "outputs": [
@@ -498,7 +542,7 @@
        "0.42"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -509,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "id": "0020270d",
    "metadata": {},
    "outputs": [
@@ -519,7 +563,7 @@
        "29.69911764705882"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "id": "008f5bb9",
    "metadata": {},
    "outputs": [
@@ -540,7 +584,7 @@
        "0.38910778230082704"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -552,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "943f8d77",
+   "id": "484b9383",
    "metadata": {},
    "outputs": [],
    "source": []
