--- a/One hot encoding.ipynb
+++ b/One hot encoding.ipynb
@@ -5,7 +5,18 @@
    "execution_count": 1,
    "id": "915a85f1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Abdur rahim nishad\\anaconda3\\lib\\site-packages\\numpy\\_distributor_init.py:30: UserWarning: loaded more than 1 DLL from .libs:\n",
+      "C:\\Users\\Abdur rahim nishad\\anaconda3\\lib\\site-packages\\numpy\\.libs\\libopenblas.EL2C6PLE4ZYW3ECEVIV3OXXGRN2NRFM2.gfortran-win_amd64.dll\n",
+      "C:\\Users\\Abdur rahim nishad\\anaconda3\\lib\\site-packages\\numpy\\.libs\\libopenblas.XWYDX2IKJW2NMTWSFYNGFUWKQU3LYTCZ.gfortran-win_amd64.dll\n",
+      "  warnings.warn(\"loaded more than 1 DLL from .libs:\"\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd"
    ]
@@ -1340,7 +1351,7 @@
     }
    ],
    "source": [
-    "pd.get_dummies(df.brand.replace(rep,\"uncommon\"))"
+    "pd.get_dummies(df.b rand.replace(rep,\"uncommon\"))"
    ]
   },
   {
@@ -2024,6 +2035,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c5a4aa0e",
+   "metadata": {},
+   "source": [
+    "# Sklearn implementation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 37,
    "id": "02f08bf9",
@@ -2045,17 +2064,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "id": "eed58f3d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Abdur rahim nishad\\anaconda3\\lib\\site-packages\\sklearn\\preprocessing\\_encoders.py:828: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "new_xtrain=oh.fit_transform(x_train[[\"fuel\",\"owner\"]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "id": "5c276292",
    "metadata": {},
    "outputs": [
@@ -2071,7 +2099,7 @@
        "       [0., 0., 1., ..., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2082,7 +2110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 44,
    "id": "dcca7cd6",
    "metadata": {},
    "outputs": [],
@@ -2092,7 +2120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 45,
    "id": "db41d490",
    "metadata": {},
    "outputs": [
@@ -2108,7 +2136,7 @@
        "       [1., 0., 0., ..., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2118,8 +2146,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f2be9681",
+   "metadata": {},
+   "source": [
+    "# numpy array append"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 47,
    "id": "174412d3",
    "metadata": {},
    "outputs": [
@@ -2135,7 +2171,7 @@
        "       ['Maruti', 65755, 0.0, ..., 0.0, 0.0, 0.0]], dtype=object)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2146,7 +2182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 48,
    "id": "54d25317",
    "metadata": {},
    "outputs": [
@@ -2232,7 +2268,7 @@
        "4   Maruti     120000  Petrol   First Owner         130000"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2243,7 +2279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 49,
    "id": "e21e1e7a",
    "metadata": {},
    "outputs": [],
@@ -2253,7 +2289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 50,
    "id": "b3623212",
    "metadata": {},
    "outputs": [],
@@ -2264,7 +2300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 51,
    "id": "1d3fa919",
    "metadata": {},
    "outputs": [
@@ -2277,7 +2313,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2288,7 +2324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 52,
    "id": "8c8065cf",
    "metadata": {},
    "outputs": [],
@@ -2298,7 +2334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 53,
    "id": "cf610cde",
    "metadata": {},
    "outputs": [
@@ -2310,7 +2346,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2321,7 +2357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 54,
    "id": "b3aa51a0",
    "metadata": {},
    "outputs": [
@@ -2647,7 +2683,7 @@
        "[8128 rows x 17 columns]"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2661,6 +2697,30 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f441adec",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71d92653",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2a6f0ab",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33a1148b",
    "metadata": {},
    "outputs": [],
    "source": []
