--- a/Ridge Regularization.ipynb
+++ b/Ridge Regularization.ipynb
@@ -279,6 +279,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "396aa1b7",
+   "metadata": {},
+   "source": [
+    "# Ridge"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "id": "664212d1",
