--- a/binning and binarization.ipynb
+++ b/binning and binarization.ipynb
@@ -5,7 +5,18 @@
    "execution_count": 1,
    "id": "aec6217b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Abdur rahim nishad\\anaconda3\\lib\\site-packages\\numpy\\_distributor_init.py:30: UserWarning: loaded more than 1 DLL from .libs:\n",
+      "C:\\Users\\Abdur rahim nishad\\anaconda3\\lib\\site-packages\\numpy\\.libs\\libopenblas.EL2C6PLE4ZYW3ECEVIV3OXXGRN2NRFM2.gfortran-win_amd64.dll\n",
+      "C:\\Users\\Abdur rahim nishad\\anaconda3\\lib\\site-packages\\numpy\\.libs\\libopenblas.XWYDX2IKJW2NMTWSFYNGFUWKQU3LYTCZ.gfortran-win_amd64.dll\n",
+      "  warnings.warn(\"loaded more than 1 DLL from .libs:\"\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np"
@@ -155,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "5e1055fd",
    "metadata": {},
    "outputs": [],
@@ -166,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "06671379",
    "metadata": {},
    "outputs": [],
@@ -176,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "5da28f69",
    "metadata": {},
    "outputs": [
@@ -226,7 +237,7 @@
        "73   26.0  14.4542"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "08dcb3e7",
    "metadata": {},
    "outputs": [],
@@ -248,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "5386c082",
    "metadata": {},
    "outputs": [],
@@ -259,8 +270,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "d2acc068",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6293706293706294"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(y_test,y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "deeb84e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6261150234741784"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(cross_val_score(DecisionTreeClassifier(),X,y,cv=10,scoring='accuracy'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d10c7c5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kbin_age = KBinsDiscretizer(n_bins=15,encode='ordinal',strategy='quantile')\n",
+    "kbin_fare = KBinsDiscretizer(n_bins=15,encode='ordinal',strategy='quantile')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "4808a793",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trf = ColumnTransformer([\n",
+    "    ('first',kbin_age,[0]),\n",
+    "    ('second',kbin_fare,[1])\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "123007c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "X_train_trf = trf.fit_transform(X_train)\n",
+    "X_test_trf = trf.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "db4ace15",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([15])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trf.named_transformers_[\"second\"].n_bins_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "e03fd97c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([array([  0.    ,   7.25  ,   7.775 ,   7.8958,   8.1583,  10.5   ,\n",
+       "               13.    ,  14.4542,  18.75  ,  26.    ,  26.55  ,  31.275 ,\n",
+       "               51.4792,  76.2917, 108.9   , 512.3292])                   ],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trf.named_transformers_[\"second\"].bin_edges_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "90267e84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf=DecisionTreeClassifier()\n",
+    "clf.fit(X_train_trf,y_train)\n",
+    "y_pred2=clf.predict(X_test_trf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "eaf397a7",
    "metadata": {},
    "outputs": [
     {
@@ -275,19 +421,19 @@
     }
    ],
    "source": [
-    "accuracy_score(y_test,y_pred)"
+    "accuracy_score(y_test,y_pred2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "deeb84e1",
+   "id": "8128913c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6345070422535211"
+       "0.6316901408450704"
       ]
      },
      "execution_count": 22,
@@ -296,65 +442,14 @@
     }
    ],
    "source": [
-    "np.mean(cross_val_score(DecisionTreeClassifier(),X,y,cv=10,scoring='accuracy'))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "d10c7c5d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "kbin_age = KBinsDiscretizer(n_bins=15,encode='ordinal',strategy='quantile')\n",
-    "kbin_fare = KBinsDiscretizer(n_bins=15,encode='ordinal',strategy='quantile')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "4808a793",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trf = ColumnTransformer([\n",
-    "    ('first',kbin_age,[0]),\n",
-    "    ('second',kbin_fare,[1])\n",
-    "])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "123007c1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "X_train_trf = trf.fit_transform(X_train)\n",
-    "X_test_trf = trf.transform(X_test)"
+    "X_trf=trf.fit_transform(X)\n",
+    "np.mean(cross_val_score(DecisionTreeClassifier(),X,y,cv=10,scoring=\"accuracy\"))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db4ace15",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e03fd97c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "90267e84",
+   "id": "23027d5a",
    "metadata": {},
    "outputs": [],
    "source": []
