--- a/gradient_descent_step by step.ipynb
+++ b/gradient_descent_step by step.ipynb
@@ -258,7 +258,7 @@
     "# Lets apply Gradient Descent assuming slope is constant m = 78.35\n",
     "# and let's assume the starting value for intercept b = 0\n",
     "\n",
-    "y_pred=((78.35*X)+100).reshape(4)"
+    "y_pred=((78.35*X)+100).reshape(4) #lets b=100"
    ]
   },
   {
