--- a/Power Transformer .ipynb
+++ b/Power Transformer .ipynb
@@ -5,7 +5,18 @@
    "execution_count": 1,
    "id": "6965659d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Abdur rahim nishad\\anaconda3\\lib\\site-packages\\numpy\\_distributor_init.py:30: UserWarning: loaded more than 1 DLL from .libs:\n",
+      "C:\\Users\\Abdur rahim nishad\\anaconda3\\lib\\site-packages\\numpy\\.libs\\libopenblas.EL2C6PLE4ZYW3ECEVIV3OXXGRN2NRFM2.gfortran-win_amd64.dll\n",
+      "C:\\Users\\Abdur rahim nishad\\anaconda3\\lib\\site-packages\\numpy\\.libs\\libopenblas.XWYDX2IKJW2NMTWSFYNGFUWKQU3LYTCZ.gfortran-win_amd64.dll\n",
+      "  warnings.warn(\"loaded more than 1 DLL from .libs:\"\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -237,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "97732244",
    "metadata": {},
    "outputs": [],
@@ -255,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "715952eb",
    "metadata": {},
    "outputs": [],
@@ -266,17 +277,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "7832c0d7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6275531792314851"
+       "0.627553179231485"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,17 +305,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "20ffa5a1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.46099404916628667"
+       "0.4609940491662866"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "4834acb7",
    "metadata": {},
    "outputs": [
@@ -498,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "7aca5725",
    "metadata": {},
    "outputs": [
@@ -584,12 +595,13 @@
        "7                 Age        0.066631"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Applying box_cox transform\n",
     "pt=PowerTransformer(method=\"box-cox\")\n",
     "x_train_transformed=pt.fit_transform(X_train+0.000001)\n",
     "x_test_transformed=pt.transform(X_test+0.000001)\n",
@@ -598,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "d6b5bd4c",
    "metadata": {},
    "outputs": [
@@ -608,7 +620,7 @@
        "0.8047825006181188"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "id": "0a6c04a7",
    "metadata": {},
    "outputs": [
@@ -632,7 +644,7 @@
        "0.6658537942219861"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -649,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "id": "33466191",
    "metadata": {},
    "outputs": [
@@ -849,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "id": "4092b4c7",
    "metadata": {},
    "outputs": [
@@ -942,12 +954,13 @@
        "7                 Age             0.019885"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Applying yeo-johnson\n",
     "pt1 = PowerTransformer()\n",
     "\n",
     "X_train_transformed2 = pt1.fit_transform(X_train)\n",
@@ -965,17 +978,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "id": "c1b8be48",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6834625134285744"
+       "0.6834625134285743"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -992,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "id": "eea3bdee",
    "metadata": {},
    "outputs": [],
@@ -1002,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "id": "3fa7bb12",
    "metadata": {},
    "outputs": [
@@ -1201,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "id": "add002ab",
    "metadata": {},
    "outputs": [
@@ -1296,7 +1309,7 @@
        "7                 Age         0.001771             0.019885"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
